--- a/lyrics_map.ipynb
+++ b/lyrics_map.ipynb
@@ -244,16 +244,7 @@
     "\n",
     "origin = city_mentions['city'].apply(f)\n",
     "\n",
-    "city_mentions['country'] = origin"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "city_mentions = city_mentions.rename(columns={'country':'country_raw'})"
+    "city_mentions['country_raw'] = origin"
    ]
   },
   {
@@ -340,7 +331,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#create a fxn to clean the output in the country column - or change in place? - try this instead\n",
+    "#create a fxn to clean the output in the country column\n",
     "fn = lambda x: list(x)[0]\n",
     "\n",
     "city_mentions['country'] = city_mentions['country_raw'].apply(fn)"
