--- a/lyrics_map.ipynb
+++ b/lyrics_map.ipynb
@@ -913,7 +913,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#exapand entries in raw_data - we only really care about 0 so will drop the rest afterwards\n",
+    "#expand entries in raw_data - we only really care about 0 so will drop the rest afterwards\n",
     "city_data = city_data.join(city_data['raw_data'].str.split(',', expand=True))"
    ]
   },
